examples/test/testpolicy13426.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13426
  namespace: namespace232
spec:
  podSelector:
    matchLabels:
      key32: value28
      key39: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value33
      podSelector:
        matchLabels:
          key29: value33
          key35: value3
